# d8vk

./: README.md  dxvk.conf  meson.build  meson_options.txt  setup_d3d8.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: artifacts.yml  test-build-windows.yml
include/windows/directx/: README.md
src/: meson.build
src/d3d7/: d3d7_buffer.cpp  d3d7_buffer.h  d3d7_device.cpp  d3d7_device.h  d3d7_interface.cpp  d3d7_interface.h
src/d3d8/: d3d8_d3d9_util.h  d3d8_device.cpp  d3d8_device.h  d3d8_format.h  d3d8_interface.cpp  d3d8_interface.h  d3d8_main.cpp  d3d8_options.h  d3d8_subresource.h  meson.build
src/d3d9/: d3d9_bridge.cpp  d3d9_bridge.h  d3d9_common_buffer.h  d3d9_device.cpp  d3d9_device.h  d3d9_fixed_function.cpp  d3d9_fixed_function.h  d3d9_interface.cpp  d3d9_interface.h  d3d9_interfaces.h  d3d9_interop.cpp  d3d9_interop.h  d3d9_swapchain.cpp  d3d9_swapchain.h  meson.build
src/ddraw/: d3d_include.h  d3d_util.h  d3d_wrapped_object.h  dd7_surface.cpp  dd7_surface.h  dd7_util.h  ddraw.def  meson.build  version.rc
src/ddraw/d3d7/: d3d7_buffer.cpp  d3d7_buffer.h  d3d7_device.cpp  d3d7_device.h  d3d7_interface.cpp  d3d7_interface.h
src/ddraw/wrapper/: AddressLookupTable.h  Logging.h  ddraw.h  dllmain.cpp
src/ddraw/wrapper/Versions/: IDirect3D.cpp  IDirect3D2.cpp  IDirect3D3.cpp  IDirect3D7.cpp  IDirect3DDevice.cpp  IDirect3DDevice2.cpp  IDirect3DDevice3.cpp  IDirect3DDevice7.cpp  IDirect3DMaterial.cpp  IDirect3DMaterial2.cpp  IDirect3DMaterial3.cpp  IDirect3DTexture.cpp  IDirect3DTexture2.cpp  IDirect3DVertexBuffer.cpp  IDirect3DVertexBuffer7.cpp  IDirect3DViewport.cpp  IDirect3DViewport2.cpp  IDirect3DViewport3.cpp  IDirectDraw.cpp  IDirectDraw2.cpp  IDirectDraw3.cpp  IDirectDraw4.cpp  IDirectDraw7.cpp  IDirectDrawSurface.cpp  IDirectDrawSurface2.cpp  IDirectDrawSurface3.cpp  IDirectDrawSurface4.cpp  IDirectDrawSurface7.cpp
src/dxso/: dxso_compiler.cpp  dxso_options.h
src/dxvk/: dxvk_adapter.cpp  dxvk_device_info.h  dxvk_extensions.h  dxvk_stats.h
src/dxvk/hud/: dxvk_hud_item.cpp  dxvk_hud_item.h
src/util/config/: config.cpp
src/util/log/: log.cpp  log.h
src/vulkan/: vulkan_util.h
